thay đổi font chữ

--- a/CV.html
+++ b/CV.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<font color="yellow">
 <head>
     <meta charset="UTF-8">
     <title>CV</title>
@@ -8,16 +7,13 @@
         body { background-image: url("download (2).jpg")}
     </style>
 
-
-
 </head>
 <body>
 <ol type="1">
     <font color="yellow">
     <li>Họ và tên: Phạm Minh T</li>
     <li>Địa chỉ: Hà Nội</li>
-    <li>Số điện thoại: 123456789</li>
-        <li>Email: <a href="https://vi.wikipedia.org/wiki/Tim_Berners-Lee" target="_blank">abc@gmail.com</a> </li>
+    <li>Số điện thoại: 123456789</li><li>Email: <a href="https://vi.wikipedia.org/wiki/Tim_Berners-Lee" target="_blank">abc@gmail.com</a> </li>
     <li>Ảnh:<br><img src="tim-berners-lee-webpage.png" height="200" width="300" > </li>
     <li>Học vấn: 12/12</li>
     <li>Bằng cấp: THPT</li>
